--- a/projects/iosv-single-test.yml
+++ b/projects/iosv-single-test.yml
@@ -10,7 +10,7 @@
 config:
   # the VIRL host & port
   host: {{ env['VIRL_HOST'] or "localhost" }}
-  host: {{ env['VIRL_PORT'] or "localhost" }}
+  port: {{ env['VIRL_PORT'] or "19399" }}
   # username and password
   user: {{ env['VIRL_USER'] or "guest" }}
   password: {{ env['VIRL_PASS'] or "guest" }}
