--- a/projects/IOSv/iosv-1.cfg
+++ b/projects/IOSv/iosv-1.cfg
@@ -51,6 +51,10 @@ interface Loopback0
   description Loopback
   ip address 192.168.0.2 255.255.255.255
 !
+interface Loopback1
+  description Loopback
+  ip address 192.168.0.10 255.255.255.255
+!
 interface GigabitEthernet0/0
   description OOB Management
   vrf forwarding Mgmt-intf
@@ -80,6 +84,7 @@ interface GigabitEthernet0/2
 !
 router ospf 1
   network 192.168.0.2 0.0.0.0 area 0
+  network 192.168.0.10 0.0.0.0 area 0
   log-adjacency-changes
   passive-interface Loopback0
   network 10.0.0.4 0.0.0.3 area 0
