--- a/projects/IOSv/iosv-single-test.yml
+++ b/projects/IOSv/iosv-single-test.yml
@@ -9,8 +9,8 @@
 
 config:
   # the VIRL host & port
-  host: {{ env['VIRL_HOST'] or "localhost" }}
-  port: {{ env['VIRL_PORT'] or "19399" }}
+  host: {{ env['VIRL_STD_HOST'] or "localhost" }}
+  port: {{ env['VIRL_STD_PORT'] or "19399" }}
   # username and password
   user: {{ env['VIRL_USER'] or "guest" }}
   password: {{ env['VIRL_PASS'] or "guest" }}
