--- a/projects/PortChannel/port-channel-test.yml
+++ b/projects/PortChannel/port-channel-test.yml
@@ -35,8 +35,8 @@
 
 config:
   # the VIRL host
-  host: {{ env['VIRL_HOST'] or "localhost" }}
-  port: {{ env['VIRL_PORT'] or "19399" }}
+  host: {{ env['VIRL_STD_HOST'] or "localhost" }}
+  port: {{ env['VIRL_STD_PORT'] or "19399" }}
   # username and password
   user: {{ env['VIRL_USER'] or "guest" }}
   password: {{ env['VIRL_PASS'] or "guest" }}
