--- a/projects/IOSv/iosv-1.cfg
+++ b/projects/IOSv/iosv-1.cfg
@@ -81,6 +81,11 @@ interface GigabitEthernet0/2
   no shutdown
 !
 !
+interface GigabitEthernet0/0.100
+ encapsulation dot1Q 100
+ ip address 172.100.100.100 255.255.255.0
+ no cdp enable
+!
 !
 router ospf 1
   network 192.168.0.2 0.0.0.0 area 0
