--- a/projects/IOSv/iosv-single-test.yml
+++ b/projects/IOSv/iosv-single-test.yml
@@ -48,7 +48,7 @@ sims:
       in:
       - term len 0
       - show version
-      - show run
+      - show run | inc hostname
       - conf t
       - hostname mychangedname
       - end
