--- a/projects/IOSv/iosv-1.cfg
+++ b/projects/IOSv/iosv-1.cfg
@@ -1,8 +1,8 @@
 ! IOS Config generated on 2017-03-07 19:59
 ! by autonetkit_0.23.5
 ! witty change
-!
-hostname las-vegas-router-1
+! Boring change. :-P
+hostname iosv-1
 boot-start-marker
 boot-end-marker
 !
