create VLAN interface 200

--- a/projects/IOSv/iosv-1.cfg
+++ b/projects/IOSv/iosv-1.cfg
@@ -86,6 +86,11 @@ interface GigabitEthernet0/0.100
  ip address 172.100.100.100 255.255.255.0
  no cdp enable
 !
+interface GigabitEthernet0/0.200
+ encapsulation dot1Q 200
+ ip address 172.100.200.200 255.255.255.0
+ no cdp enable
+!
 !
 router ospf 1
   network 192.168.0.2 0.0.0.0 area 0
