--- a/projects/IOSv/iosv-1.cfg
+++ b/projects/IOSv/iosv-1.cfg
@@ -1,8 +1,9 @@
 ! IOS Config generated on 2017-03-07 19:59
 ! by autonetkit_0.23.5
 ! witty change
+! another witty change
 ! Boring change. :-P
-hostname iosv-1
+hostname gsx-iosv-1
 boot-start-marker
 boot-end-marker
 !
