--- a/projects/IOSv/iosv-1.cfg
+++ b/projects/IOSv/iosv-1.cfg
@@ -3,7 +3,7 @@
 ! witty change
 ! another witty change
 ! Boring change. :-P
-hostname gsx-iosv-1
+hostname gsx2018-iosv-1
 boot-start-marker
 boot-end-marker
 !
@@ -90,6 +90,11 @@ interface GigabitEthernet0/0.100
 interface GigabitEthernet0/0.200
  encapsulation dot1Q 200
  ip address 172.100.200.200 255.255.255.0
+ no cdp enable
+!
+interface GigabitEthernet0/0.300
+ encapsulation dot1Q 300
+ ip address 172.100.201.201 255.255.255.0
  no cdp enable
 !
 !
