--- a/projects/IOSv/iosv-1.cfg
+++ b/projects/IOSv/iosv-1.cfg
@@ -97,6 +97,11 @@ interface GigabitEthernet0/0.300
  ip address 172.100.201.201 255.255.255.0
  no cdp enable
 !
+interface GigabitEthernet0/0.400
+ encapsulation dot1Q 400
+ ip address 172.100.202.202 255.255.255.0
+ no cdp enable
+!
 !
 router ospf 1
   network 192.168.0.2 0.0.0.0 area 0
